$Id$

				MBSEBBS History.

v0.35.01	05-Jun-2002



v0.33.21	04-Jun-2002

		This is the final release of the 0.33.20 development version.


v0.33.20        10-Feb-2002 - 04-Jun-2002

	upgrade:
		Remove /opt/mbse/etc/safe.data
		Compile sources and install binaries. Restart the BBS.
		Enter mbsetup, this will upgrade the databases.
		Go into global configuration, exit and save, this will update
		the main configuration (add default macro path).
		Edit the message groups and file groups for new settings.
		Run mbfile check to fix download directory permissions.
		Check the setting in menu 10.2.13 if it does what you want it
		to do.

	general:
		Added structures for area maintenance with area lists.
		Installing the maptabs don't give any errors anymore when
		installed as user mbse. The location of the source isn't
		important anymore to install the maptabs.
		Updated German, Spanish and Galego languages.
		The location of the sourcefiles is not important anymore.
		Added detection of vpopmail in default installation path.
		Changed language prompts 372, 373, 387, 388, 389, 390 and 438.
		Added the turbodiesel macro language so that reports can be
		customized per language and reports. Thanks to Redy Rodriguez
		for finding this one and implement it into mbse bbs.
		Splitted the No TCP settings in No IBN, No IFC and No ITN.
		Removed settings for Non-hold mail and Pickup Primary.
		Removed several setting for http setup, this is now handled
		by the macro templates.
		The rc files for joe, the external editor are now copied to
		/usr/lib/joe or /etc/joe depending on your distribution.
		Several readme files are now in a new html file, the FAQ.

	common.a:
		Added 2 functions to return the OS name and CPU family.
		Added a function to return the right tearline.
		Added support for ext3 filesystem in diskspace check.
		Fixed lharc archives return code to LHA.
		Changed mkprod.awk script to support Debian Woody.