@@ -13,10 +13,10 @@
 <BODY>
 <BLOCKQUOTE>
 <center><img SRC="images/mbse.jpg" BORDER=0></center>
-<div align=center><h1>MBSE BBS System Guide v0.33.20</h1></div>
+<div align=center><h1>MBSE BBS System Guide v0.35.01</h1></div>
 <HR>
 
-<div align=right><h5>Last update 11-May-2002</h5></div>
+<div align=right><h5>Last update 05-Jun-2002</h5></div>
 <P>
 
 
